--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,7 +25,9 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-    
+    - name: Build with Gradle
+      run: ./gradlew clean build
+      
     - name: Build and Push Docker image
       uses: mr-smithers-excellent/docker-build-push@v6
       with:
